--- a/index.html
+++ b/index.html
@@ -28,12 +28,22 @@
               <td>Gender</td>
               <td>
                 Male <input type="radio" name="gender" >
-               Female <input type="radio" name="gender" >
+                Female <input type="radio" name="gender" >
             </td>
             </tr>
             <tr>
               <td>Picture</td>
               <td><input type="file" name="" id=""></td>
+            </tr>
+            <tr>
+              <td>Country</td>
+              <td>
+                <select name="" id="">
+                  <option value="germany">Germany</option>
+                  <option value="spain">Spain</option>
+                  <option value="france">France</option>
+                </select>
+              </td>
             </tr>
             <tr>
               <td>Preferred languages</td>
